--- a/src/app/components/mainapp/newdeposits/newdeposits.component.css
+++ b/src/app/components/mainapp/newdeposits/newdeposits.component.css
@@ -40,3 +40,16 @@
   
   }
   
+  .vertical-center-div {
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+   
+  }
+
+  .extended-content {
+    width:100%;
+    height: 100px;
+    text-align:center;
+}
