improvement to deposit view

--- a/src/app/components/mainapp/newdeposits/cashbox.html
+++ b/src/app/components/mainapp/newdeposits/cashbox.html
@@ -110,7 +110,7 @@
         </mat-form-field>            
         </div>
         </form>
-        Total Cash Sum should be {{ data.payload}}
+        Total Cash Sum should be {{ data.payload | currency}}
 </mat-dialog-content>
  
 <mat-dialog-actions>
