added paytype format pipe and fixed display in receipt

--- a/src/app/components/mainapp/receipt/receipts.component.html
+++ b/src/app/components/mainapp/receipt/receipts.component.html
@@ -196,7 +196,7 @@
           <mat-divider [inset]="true"></mat-divider>
           <div class="row">
               <div class="col-xs-6 col-md-5"><B>Payment</B></div>
-              <div class="col-xs-6 col-md-5"><span class="pull-right"> {{lastPayType}}</span></div>
+              <div class="col-xs-6 col-md-5"><span class="pull-right"> {{lastPayType | readablePayTypes}}</span></div>
           </div>
           <mat-divider [inset]="true"></mat-divider>
           <div class="row">
