--- a/src/app/components/mainapp/editreceipt/editreceipt.component.html
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.html
@@ -182,7 +182,7 @@
               <!-- Amount Column -->
               <ng-container matColumnDef="amount">
                 <mat-header-cell *matHeaderCellDef class="example-header">Amount</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.amount }}</mat-cell>
+                <mat-cell *matCellDef="let row">{{ row.amount | currency}}</mat-cell>
               </ng-container>
           
               <!-- Invoice Column -->
@@ -194,7 +194,7 @@
               <!-- Paytype Column -->
               <ng-container matColumnDef="paytype">
                 <mat-header-cell *matHeaderCellDef class="example-header">Pay Type</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.paytype }}</mat-cell>
+                <mat-cell *matCellDef="let row">{{ row.paytype | readablePayTypes}}</mat-cell>
               </ng-container>
           
               <!-- Rcvd Column -->
