bug fixedit receipt

--- a/src/app/components/mainapp/editreceipt/editreceipt.component.html
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.html
@@ -59,7 +59,7 @@
               </div>
               <div class="column" >
                 <mat-form-field  >
-                  <input matInput placeholder="Amount To"  [(ngModel)]="amountto" name="amountto" currencyMask style="text-align:right;" >
+                  <input matInput placeholder="Amount To"  ngModel name="amountto" currencyMask style="text-align:right;" >
                 </mat-form-field>
               </div>
             </div>
